@@ -23,8 +23,6 @@ require 'net/http'
 
 module ElasticAPM
   RSpec.describe 'Spy: NetHTTP', :intercept do
-    after { WebMock.reset! }
-
     it 'spans http calls' do
       WebMock.stub_request(:get, %r{http://example.com/.*})
 
@@ -156,7 +154,6 @@ module ElasticAPM
       expect(span.action).to eq 'POST'
 
       ElasticAPM.stop
-      WebMock.reset!
     end
 
     describe 'destination info' do
