@@ -50,3 +50,10 @@ RSpec.configure do |config|
   config.example_status_persistence_file_path = ".rspec_status"
   config.filter_run_excluding(type: "json_schema") unless ENV["INCLUDE_SCHEMA_SPECS"]
 end
+
+module ElasticAPM
+  class Config
+    option :central_config, type: :bool, default: false
+    option :cloud_provider, type: :string, default: 'none'
+  end
+end
